--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>Section 2: JavaScript Language Basics</h1>
-        <script src="starter/script023-CC3.js"></script>
+        <script src="starter/script029-2-Array-For.js"></script>
     </body>
 </html>
